# qantara-protocol

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-workspace.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api-server/: README.md  build-and-test.sh  env.example  package.json  run-foundation-tests.sh  test-foundation.sh  test-manual.md  tsconfig.json
apps/checkout-ui/: .gitignore  README.md  next.config.js  package.json  tailwind.config.js
contracts/: ALTERNATIVE-UPGRADE.md  Anchor.toml  Cargo.toml  DIAGNOSIS.md  FINAL-FIX.md  FIX-VERSION-MISMATCH.md  FUND-DEVNET-WALLET.md  FUND-TEST-ACCOUNTS.md  GET-WALLET-ADDRESS.md  MERCHANT-API-INTERFACE.md  MERCHANT-PAYMENT-REQUIREMENTS.md  PAYMENT-FLOW-DIAGRAM.md  PREREQUISITES-CHECK.md  PROGRAM-REVIEW-SUMMARY.md  QUICK-FIX-V2.md  QUICK-FIX.md  README-FIX.md  README-SETUP.md  README-TEST-ENV.md  README-TESTING.md  README-V2.md  README.md  ROOT-CAUSE-ANALYSIS.md  SOLUTION-ATTEMPT.md  TEST-ACCOUNTS-EXPLANATION.md  TEST-EXPLANATION.md  TESTING-APPROACH.md  VAULT-ARCHITECTURE.md  package.json  tsconfig.json
contracts/programs/qantara/: Cargo.toml
contracts/programs/qantara-v2/: Cargo.toml
contracts/programs/qantara-v2/src/: errors.rs  lib.rs  state.rs  utils.rs
contracts/programs/qantara/src/: errors.rs  lib.rs  state.rs  utils.rs
contracts/scripts/: build-v2-only.sh  build-v2.sh  copy-binary.sh  deploy-v2.sh  fix-anchor-install.sh  fix-and-redeploy-v2.sh  fix-program-id.sh  (+10 more)
(+38 files in other folders)
