[package]
name = "qantara"
version = "0.1.0"
description = "Qantara payment protocol for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "qantara"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[workspace]
resolver = "2"
